--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.25.4",
     "@neondatabase/serverless": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.12.0",
     "dotenv": "^17.2.0",
