--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@clerk/nextjs": "^6.25.4",
     "@neondatabase/serverless": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@uploadthing/react": "^7.3.2",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "uploadthing": "^7.7.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
